core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/parameterless-lambda.tessla
in x: Events[Int]

out (() => 42) + 5